--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -42,7 +42,9 @@
     <div class="row" id="topBar">
         <div class="col-sm"></div>
         <div class="col">
-            <spam>Sistema de Chamados</spam>
+            <a id="homeTop" href="dashboard">
+                Sistema de Chamados
+            </a>
         </div>
         <div class="col-sm"></div>
     </div>
