--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,16 +40,21 @@ footer {
   height: 200px;
 }
 
-@media only screen and (max-device-width: 640px) {
-  #dashboardPanel,
-  #loginPanel {
-    width: 90% !important;
-  }
+#homeTop{
+  color: black;
+}
+
+#homeTop:hover{
+  text-decoration: none !important;
 }
 
 
 @media only screen and (max-device-width: 640px) {
   footer {
     position: relative !important;
+  }
+  #dashboardPanel,
+  #loginPanel {
+    width: 90% !important;
   }
 }
