--- a/views/criarCadastro.hbs
+++ b/views/criarCadastro.hbs
@@ -3,7 +3,7 @@
         <form action="addCadastro" method="POST">
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" class="form-control" id="nome" name="nome">
+                <input required type="text" class="form-control" id="nome" name="nome">
             </div>
             <div class="form-group">
                 <label for="cpf">CPF</label>
@@ -11,7 +11,7 @@
                     <div class="input-group-prepend">
                         <div class="input-group-text"><i class="fas fa-user"></i></div>
                     </div>
-                    <input type="text" class="form-control" id="cpf" name="cpf">
+                    <input required type="text" class="form-control" id="cpf" name="cpf">
                 </div>
             </div>
             <div class="form-group">
@@ -20,7 +20,7 @@
                     <div class="input-group-prepend">
                         <div class="input-group-text"><i class="fas fa-wallet"></i></div>
                     </div>
-                    <select class="form-control" id="cargo">
+                    <select class="form-control" id="cargo" name="cargo">
                         <option>Professor</option>
                         <option>Funcionário</option>
                         <option>Coordenador</option>
