Reestruturação do código, adicionado avisos de inserção/erro nas páginas de cadastro, implementado sistema de login sem criptografia com sessão e mudança de estilos.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -46,7 +46,7 @@
                 Sistema de Chamados
             </a>
         </div>
-        <div class="col-sm"></div>
+        <div class="col-sm text-right">{{#if nome}} <span>{{nome}}</span> {{/if}}</div>
     </div>
     {{{body}}}
     {{!-- RECEBE OS CONTEUDOS DAS PAGINAS DO HANDLEBARS,
