--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,12 +3,29 @@
   margin-top: 2em;
   background-color: white;
   padding: 1em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 body {
   background-color: black !important;
   font-family: "Poppins", sans-serif !important;
   overflow-x: hidden;
+  background-color: #f2f2f2 !important;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 200px;
+  background-color: rgb(19, 59, 108);
+  z-index: -1;
 }
 
 #topBar {
@@ -22,7 +39,7 @@ body {
 footer {
   position: fixed;
   bottom: 0;
-  color: white;
+  color: black;
   width: 100%;
   padding: 1em;
 }
@@ -34,20 +51,24 @@ footer {
   margin-top: 2em;
   max-width: 900px;
   text-align: left;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #problema {
   height: 200px;
 }
 
-#homeTop{
+#homeTop {
   color: black;
 }
 
-#homeTop:hover{
+#homeTop:hover {
   text-decoration: none !important;
 }
-
 
 @media only screen and (max-device-width: 640px) {
   footer {
@@ -56,5 +77,9 @@ footer {
   #dashboardPanel,
   #loginPanel {
     width: 90% !important;
+  }
+
+  .btn {
+    margin-top: 5px !important;
   }
 }
