--- a/views/criarCadastro.hbs
+++ b/views/criarCadastro.hbs
@@ -1,3 +1,24 @@
+<div class="container d-flex justify-content-center">
+
+    {{#if msgSuccess}}
+
+    <div class="alert alert-success alert-dismissible fade show mb-0 mt-4" role="alert" style="width: fit-content;">
+        {{msgSuccess}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">x</span>
+        </button>
+    </div>
+    {{/if}}
+    {{#if msgError}}
+    <div class="alert alert-danger alert-dismissible fade show mb-4 mt-4" role="alert">
+        {{msgError}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">x</span>
+        </button>
+    </div>
+    {{/if}}
+</div>
+
 <div class="container text-center">
     <div class="container-fluid rounded" id="formulario">
         <form action="addCadastro" method="POST">
@@ -12,6 +33,15 @@
                         <div class="input-group-text"><i class="fas fa-user"></i></div>
                     </div>
                     <input required type="text" class="form-control" id="cpf" name="cpf">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fas fa-envelope"></i></div>
+                    </div>
+                    <input required type="text" class="form-control" id="email" name="email">
                 </div>
             </div>
             <div class="form-group">
