--- a/views/criarChamado.hbs
+++ b/views/criarChamado.hbs
@@ -1,3 +1,24 @@
+<div class="container d-flex justify-content-center">
+
+    {{#if msgSuccess}}
+
+    <div class="alert alert-success alert-dismissible fade show mb-0 mt-4" role="alert" style="width: fit-content;">
+        {{msgSuccess}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">x</span>
+        </button>
+    </div>
+    {{/if}}
+    {{#if msgError}}
+    <div class="alert alert-danger alert-dismissible fade show mb-4 mt-4" role="alert">
+        {{msgError}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">x</span>
+        </button>
+    </div>
+    {{/if}}
+</div>
+
 <div class="container text-center">
     <div class="container-fluid rounded" id="formulario">
         <form action="addChamado" method="POST">
@@ -19,7 +40,7 @@
                         <div class="input-group-text"><i class="fas fa-door-closed"></i></div>
                     </div>
                     <select class="form-control" name="salas" id="salas">
-                        {{#each salas}}<option>{{nome}}</option>{{/each}}
+                        {{#each salas}}<option value="{{nome}}">{{nome}}</option>{{/each}}
                     </select>
                 </div>
             </div>
