--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,7 +4,8 @@
         <div class="col-sm pr-1 pl-1"><a href="criarChamado"><button type="button" class="btn btn-dark btn-lg">Inserir
                     Chamado</button></a>
         </div>
-        <div class="col-sm pr-1 pl-1"><a href="criarCadastro"><button type="button" class="btn btn-dark btn-lg">Cadastrar
+        <div class="col-sm pr-1 pl-1"><a href="criarCadastro"><button type="button"
+                    class="btn btn-dark btn-lg">Cadastrar
                     Funcionário</button></a>
         </div>
         <div class="col-sm pr-1 pl-1"><a href="criarSalas"><button type="button" class="btn btn-dark btn-lg">Cadastrar
@@ -14,21 +15,27 @@
 
     <div class="container pt-2 pl-2 pr-2 mt-4">
         <h4 class="text-center mb-3">CHAMADOS</h4>
-        <table class="table table-striped table-responsive-sm">
+        <table class="table table-bordered table-hover table-sm text-center table-striped table-responsive-sm">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Usuário</th>
                     <th scope="col">Descrição</th>
+                    <th scope="col">Sala</th>
                     <th scope="col">Status</th>
                 </tr>
             </thead>
             <tbody>{{#each chamados}}
                 <tr>
-                <th scope="row">{{id}}</th>
-                <td>{{nome}}</td>
-                <td>{{problema}}</td>
-                <td>Pendente</td>
+                    <th scope="row">{{id}}</th>
+                    <td>{{nome}}</td>
+                    <td>{{problema}}</td>
+                    <td>{{salas}}</td>
+                    <td><select>
+                            <option style="font-weight: bold;">{{status}}</option>
+                            <option>Concluido</option>
+                            <option>Pendente</option>
+                        </select> </td>
                 </tr> {{/each}}
             </tbody>
         </table>
