--- a/views/criarCadastro.hbs
+++ b/views/criarCadastro.hbs
@@ -57,6 +57,14 @@
                     </select>
                 </div>
             </div>
+            <div class="form-group">
+                <label for="admin">Admin</label>
+                <div class="input-group">
+                    <select class="form-control" id="admin" name="admin">
+                        <option value="true">Sim</option>
+                        <option value="false">Não</option>
+                    </select> </div>
+            </div>
             <div class="col text-center">
                 <button type="submit" class="btn btn-dark">Cadastrar</button>
             </div>
