--- a/views/criarChamado.hbs
+++ b/views/criarChamado.hbs
@@ -26,11 +26,11 @@
                 <div class="form-group col-sm">
                     <label for="nome">Nome</label>
                     <input readonly type="text" class="form-control" name="nome" id="nome"
-                        value="IAGO DE ARAÚJO GALVÃO">
+                        value="{{nome}}">
                 </div>
                 <div class="form-group col-sm">
                     <label for="cargo">Cargo</label>
-                    <input readonly type="text" class="form-control" name="cargo" id="cargo" value="Professor">
+                    <input readonly type="text" class="form-control" name="cargo" id="cargo" value="{{cargo}}">
                 </div>
             </div>
             <div class="form-group">
