--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,13 +4,14 @@
         <div class="col-sm pr-1 pl-1"><a href="criarChamado"><button type="button" class="btn btn-dark btn-lg">Inserir
                     Chamado</button></a>
         </div>
-        <div class="col-sm pr-1 pl-1"><a href="criarCadastro"><button type="button"
+        {{#if admin}}<div class="col-sm pr-1 pl-1"><a href="criarCadastro"><button type="button"
                     class="btn btn-dark btn-lg">Cadastrar
                     Funcionário</button></a>
         </div>
-        <div class="col-sm pr-1 pl-1"><a href="criarSalas"><button type="button" class="btn btn-dark btn-lg">Cadastrar
-                    Sala</button></a>
+        <div class="col-sm pr-1 pl-1"><a href="criarSalas"><button type="button" class="btn btn-dark btn-lg">Gerenciar
+                    Salas</button></a>
         </div>
+        {{/if}}
     </div>
 
     <div class="container pt-2 pl-2 pr-2 mt-4">
