--- a/views/criarChamado.hbs
+++ b/views/criarChamado.hbs
@@ -2,7 +2,8 @@
 
     {{#if msgSuccess}}
 
-    <div class="alert alert-success alert-dismissible fade show mb-0 mt-4" role="alert" style="width: fit-content;">
+    <div class="alert alert-success alert-dismissible fade show mb-0 mt-4" role="alert"
+        style="width: fit-content; position: absolute">
         {{msgSuccess}}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">x</span>
@@ -10,7 +11,8 @@
     </div>
     {{/if}}
     {{#if msgError}}
-    <div class="alert alert-danger alert-dismissible fade show mb-4 mt-4" role="alert">
+    <div class="alert alert-danger alert-dismissible fade show mb-4 mt-4" style="width: fit-content; position: absolute"
+        role="alert">
         {{msgError}}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">x</span>
@@ -25,8 +27,7 @@
             <div class="row">
                 <div class="form-group col-sm">
                     <label for="nome">Nome</label>
-                    <input readonly type="text" class="form-control" name="nome" id="nome"
-                        value="{{nome}}">
+                    <input readonly type="text" class="form-control" name="nome" id="nome" value="{{nome}}">
                 </div>
                 <div class="form-group col-sm">
                     <label for="cargo">Cargo</label>
