--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,16 @@
+<div class="container d-flex justify-content-center">
+
+    {{#if msgSuccess}}
+
+    <div class="alert alert-success alert-dismissible fade show mb-0 mt-4" role="alert"
+        style="width: fit-content; position: fixed">
+        {{msgSuccess}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">x</span>
+        </button>
+    </div>
+    {{/if}}
+</div>
 <div class="container rounded" id="dashboardPanel">
     <h3 class="text-center">Bem-vindo!</h3>
     <div class="container row text-center mt-4 mb-4">
