--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 <div class="container d-flex justify-content-center">
   {{#if msgError}}
-  <div class="alert alert-danger alert-dismissible fade show mb-4 mt-4" role="alert">
+  <div class="alert alert-danger alert-dismissible fade show mb-4 mt-4" style="width: fit-content; position: absolute"
+    role="alert">
     {{msgError}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">x</span>
@@ -14,7 +15,6 @@
   </div>
 
   <form action="auth" method="POST">
-    {{!-- <form action="dashboard"> --}}
     <div class="form-group">
       <div class="input-group">
         <div class="input-group-prepend">
