Adicionado validação do cadastro de usuário e mudanças em algumas variaveis de sessão.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -46,7 +46,7 @@
                 Sistema de Chamados
             </a>
         </div>
-        <div class="col-sm-2 text-right" style="font-size: 15px">{{#if nome}}<a id="homeTop" href="logout"><button
+        <div class="col-sm-2 text-right" style="font-size: 15px">{{#if sessao}}<a id="homeTop" href="logout"><button
                 type="button" class="btn btn-warning" id="logout"><i class="fas fa-sign-out-alt"></i></button></a>
             {{/if}}
         </div>
