--- a/views/criarChamado.hbs
+++ b/views/criarChamado.hbs
@@ -51,6 +51,7 @@
                     <textarea required class="form-control" id="problema" name="problema"></textarea>
                 </div>
             </div>
+             <input type="hidden" id="idUser" name="idUser" value="{{idUser}}">
             <div class="col text-center">
                 <button type="submit" class="btn btn-dark">Inserir Chamado</button>
             </div>
