Adicionado sistema de encripitação, foi mudado o sistema de login e correção na validação do cadastro de usuários.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,7 +28,7 @@
         <div class="input-group-prepend">
           <div class="input-group-text"><i class="fas fa-key"></i></div>
         </div>
-        <input required type="password" class="form-control" name="cpf" />
+        <input required type="password" class="form-control" name="senha" />
       </div>
     </div>
     <p style="text-align: center;">Usar Email e CPF</p>
