--- a/views/criarCadastro.hbs
+++ b/views/criarCadastro.hbs
@@ -38,6 +38,15 @@
                 </div>
             </div>
             <div class="form-group">
+                <label for="senha">Senha</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fas fa-key"></i></div>
+                    </div>
+                    <input required type="password" class="form-control" id="senha" name="senha">
+                </div>
+            </div>
+            <div class="form-group">
                 <label for="email">Email</label>
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -65,7 +74,8 @@
                     <select class="form-control" id="admin" name="admin">
                         <option value="true">Sim</option>
                         <option value="false">Não</option>
-                    </select> </div>
+                    </select>
+                </div>
             </div>
             <div class="col text-center">
                 <button type="submit" class="btn btn-dark">Cadastrar</button>
@@ -73,3 +83,9 @@
         </form>
     </div>
 </div>
+
+<style>
+    footer {
+        position: relative;
+    }
+</style>
